<?xml version="1.0"?>
<package format="2">
  <name>ackermann_steering_controller</name>
  <version>0.17.2</version>
  <description>Controller for a steer drive mobile base.</description>
  <maintainer email="p595201m@mail.kyutech.jp">Masaru Morita</maintainer>
  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/ros-controls/ros_controllers/issues</url>
  <url type="repository">https://github.com/ros-controls/ros_controllers/ackermann_steering_controller</url>
  <author email="p595201m@mail.kyutech.jp">Masaru Morita</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>boost</depend>
  <depend>controller_interface</depend>
  <depend>diff_drive_controller</depend>
  <depend>hardware_interface</depend>
  <depend>nav_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>urdf</build_depend>

  <exec_depend>pluginlib</exec_depend>
  <exec_depend>urdf</exec_depend>

  <!--Tests-->
  <test_depend>controller_manager</test_depend>
  <test_depend>geometry_msgs</test_depend>
  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>std_srvs</test_depend>
  <test_depend>xacro</test_depend>

  <export>
    <controller_interface plugin="${prefix}/ackermann_steering_controller_plugins.xml"/>
  </export>
</package>
