<package>
  <name>controllers_msgs</name>
  <version>0.4.0</version>
  <description>Messages, services, and actions used in the ros_controllers stack.</description>
  <maintainer email="wim@hidof.com">Wim Meeussen</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/controllers_msgs</url>
  <url type="bugtracker">https://github.com/ros-controls/ros_controllers/issues</url>
  <url type="repository">https://github.com/ros-controls/ros_controllers/</url>

  <author>Stuart Glaser</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend> 
  <build_depend>trajectory_msgs</build_depend> 
  <build_depend>geometry_msgs</build_depend> 
  <build_depend>message_generation</build_depend>
  <run_depend>actionlib_msgs</run_depend> 
  <run_depend>trajectory_msgs</run_depend> 
  <run_depend>geometry_msgs</run_depend> 
  <run_depend>message_runtime</run_depend>

  <export>

  </export>
</package>
