<package>
  <name>diff_drive_controller</name>
  <version>0.9.2</version>
  <description>Controller for a differential drive mobile base.</description>
  <maintainer email="bence.magyar@pal-robotics.com">Bence Magyar</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/ros-controls/ros_controllers/wiki</url>
  <url type="bugtracker">https://github.com/ros-controls/ros_controllers/issues</url>
  <url type="repository">https://github.com/ros-controls/ros_controllers</url>

  <author email="bence.magyar@pal-robotics.com">Bence Magyar</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>sophus</build_depend>
  <build_depend>libceres-dev</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>boost</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>boost</run_depend>

  <!--Tests-->
  <build_depend>rostest</build_depend>

  <test_depend>std_srvs</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>control_toolbox</test_depend>
  <test_depend>xacro</test_depend>
  <test_depend>rqt_plot</test_depend>

  <export>
    <controller_interface plugin="${prefix}/diff_drive_controller_plugins.xml"/>
  </export>
</package>
